# Backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: analysis.py  schemas.py
app/routers/: generate.py
app/services/: analysis.py  anatomical_generator.py  extraction.py  html_generator.py  matching.py  narration.py  scene_generator.py
app/utils/: gcs.py  llm.py
tests/: fetch_models.ipynb
